--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@turf/helpers": "^7.3.4",
     "idb": "^8.0.3",
     "jszip": "^3.10.1",
+    "lucide-vue-next": "^0.564.0",
     "maplibre-gl": "^5.18.0",
     "pinia": "^3.0.4",
     "vue": "^3.5.25"
