--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lucide-vue-next": "^0.564.0",
     "maplibre-gl": "^5.18.0",
     "pinia": "^3.0.4",
+    "pmtiles": "^4.4.0",
     "vue": "^3.5.25"
   },
   "devDependencies": {
