--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "metro-studio",
   "private": true,
-  "version": "0.1.0",
+  "version": "0.41.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -21,6 +21,7 @@
     "jszip": "^3.10.1",
     "lucide-vue-next": "^0.564.0",
     "maplibre-gl": "^5.18.0",
+    "naive-ui": "^2.43.2",
     "pinia": "^3.0.4",
     "pmtiles": "^4.4.0",
     "vue": "^3.5.25"
